mod: fix ios style collapse on start animation

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,13 +31,16 @@ dd {
 /* Set core root defaults */
 html {
   scroll-behavior: smooth;
+  
 }
 
 /* Set core body defaults */
 body {
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  height: -webkit-fill-available;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
